...
    button.clipsToBounds = true
    button.addTarget(self, action: #selector(methodBar), for: .touchUpInside)
    let imageButton = UIBarButtonItem(customView: button)
    imageButton.accessibilityIdentifier = "profileButton"
    let addChannelButton = UIBarButtonItem(barButtonSystemItem: .add, target: self, action: #selector(addChannelMethod))
    self.navigationItem.rightBarButtonItems = [imageButton, addChannelButton]
    let settingsButton = UIBarButtonItem(image: UIImage(named: "settings"), style: .done, target: self, action: #selector(settingsMethod))
    settingsButton.accessibilityIdentifier = "settingsButton"
    self.navigationItem.leftBarButtonItem = settingsButton
  }
  
  private func configureRefreshControl() {
    tableView.refreshControl = UIRefreshControl()
...
